--- a/stylesheets/scss/components/_selection.scss
+++ b/stylesheets/scss/components/_selection.scss
@@ -55,7 +55,7 @@ input[type="checkbox"] {
 			}
 		}
 
-		&-disabled {
+		&:disabled {
 			+ label {
 				&:before {
 			 		color: $checkbox-disabled-color;
@@ -101,7 +101,7 @@ input[type="radio"] {
 			}
 		}
 
-		&-disabled {
+		&:disabled {
 			+ label {
 				&:before {
 					color: $radio-disabled-color;
@@ -111,7 +111,7 @@ input[type="radio"] {
 			&:checked {
 				+ label {
 					&:before {
-						content: 'check_box';
+						content: 'radio_button_checked';
 						color: $radio-disabled-color;
 					}
 				}
@@ -121,6 +121,7 @@ input[type="radio"] {
 }
 
 .sc-switch {
+	// Track
 	.sc-lever {
 		width: remCalc(50px);
 		background: lighten($black, (100% - 26%));
@@ -131,6 +132,7 @@ input[type="radio"] {
 		vertical-align: middle;
 		@include transition(background 300ms ease-in-out);
 
+		// Thumb
 		&:after {
 			width: remCalc(24px);
 			height: remCalc(24px);
@@ -148,12 +150,26 @@ input[type="radio"] {
 		display: none;
 
 		&:checked {
+			// Track
 			+ .sc-lever {
 				background: $main-color;
 
+				// Thumb
 				&:after {
 					background: $main-color;
 					right: 0;
+				}
+			}
+		}
+
+		&:disabled {
+			// Track
+			+ .sc-lever {
+				background: rgba($black, .12);
+
+				// Thumb
+				&:after {
+					background: rgba($grey-400, 1);
 				}
 			}
 		}
