--- a/stylesheets/scss/components/_icons.scss
+++ b/stylesheets/scss/components/_icons.scss
@@ -21,10 +21,10 @@
 	font-family: 'Material Icons';
 	font-weight: normal;
 	font-style: normal;
-	font-size: remCalc(24px);  /* Preferred icon size */
+	font-size: $icon-size;
 	display: inline-block;
-	width: 1rem;
-	height: 1rem;
+	width: $icon-size;
+	height: $icon-size;
 	line-height: 1;
 	text-transform: none;
 	letter-spacing: normal;
