--- a/stylesheets/scss/components/_grid.scss
+++ b/stylesheets/scss/components/_grid.scss
@@ -21,11 +21,6 @@ $medium-down: "only screen and (max-width: #{$medium-screen})";
 $large-down: "only screen and (max-width: #{$large-screen})";
 $xlarge-down: "only screen and (max-width: #{$xlarge-screen})";
 
-//
-@media #{$xsmall-up} {
-	$gutter: 24px;
-}
-
 .sc-container {
 	margin: 0 auto;
 	width: 90%;
@@ -42,9 +37,21 @@ $xlarge-down: "only screen and (max-width: #{$xlarge-screen})";
 		margin-left: (-1 * $gutter / 2);
 		margin-right: (-1 * $gutter / 2);
 
-		@media #{$xsmall-up} {
-			margin-left: (-1 * $gutter / 2);
-			margin-right: (-1 * $gutter / 2);
+		@media #{$small-only} {
+			@media only screen and (max-width: 600px) {
+				margin-left: (-1 * $gutter / 2);
+				margin-right: (-1 * $gutter / 2);
+			}
+
+			@media only screen and (min-width: 600px) {
+				margin-left: (-1 * $large-gutter / 2);
+				margin-right: (-1 * $large-gutter / 2);
+			}
+		}
+
+		@media #{$medium-up} {
+			margin-left: (-1 * $large-gutter / 2);
+			margin-right: (-1 * $large-gutter / 2);
 		}
 	}
 }
@@ -75,35 +82,97 @@ $xlarge-down: "only screen and (max-width: #{$xlarge-screen})";
 			position: relative;
 		}
 
-		$i: 1;
-		@while $i <= $columns {
-			$percent: unquote( ( 100 / ( $columns / $i ) ) + "%" );
-			&.sc-s#{$i} {
-				width: $percent;
-				margin-left: auto;
-				left: auto;
-				right: auto;
+		@media #{$xsmall-only} {
+			$i: 1;
+			@while $i <= $xsmall-columns {
+				$percent: unquote( ( 100 / ( $xsmall-columns / $i ) ) + "%" );
+				&.sc-xs#{$i} {
+					width: $percent;
+					margin-left: auto;
+					left: auto;
+					right: auto;
+				}
+				$i: $i + 1;
 			}
-			$i: $i + 1;
+
+			$i: 1;
+			@while $i <= $xsmall-columns {
+				$percent: unquote( ( 100 / ( $xsmall-columns / $i ) ) + "%" );
+				&.sc-offset-xs#{$i} {
+					margin-left: $percent;
+				}
+				&.sc-pull-xs#{$i} {
+					right: $percent;
+				}
+				&.sc-push-xs#{$i} {
+					left: $percent;
+				}
+				$i: $i + 1;
+			}
 		}
 
-		$i: 1;
-		@while $i <= $columns {
-			$percent: unquote( ( 100 / ( $columns / $i ) ) + "%" );
-			&.sc-offset-s#{$i} {
-				margin-left: $percent;
+		@media #{$small-only} {
+			// Change between 8 and 12 columns default
+			@media only screen and (max-width: 720px) {
+				$i: 1;
+				@while $i <= $small-columns {
+					$percent: unquote(( 100 / ( $small-columns / $i ) ) + "%");
+					&.sc-s#{$i} {
+						width: $percent;
+						margin-left: auto;
+						left: auto;
+						right: auto;
+					}
+					$i: $i + 1;
+				}
+
+				$i: 1;
+				@while $i <= $small-columns {
+					$percent: unquote(( 100 / ( $small-columns / $i ) ) + "%");
+					&.sc-offset-s#{$i} {
+						margin-left: $percent;
+					}
+					&.sc-pull-s#{$i} {
+						right: $percent;
+					}
+					&.sc-push-s#{$i} {
+						left: $percent;
+					}
+					$i: $i + 1;
+				}
 			}
-			&.sc-pull-s#{$i} {
-				right: $percent;
+
+			@media only screen and (min-width: 720px) and (max-width: $medium-screen) {
+				$i: 1;
+				@while $i <= $columns {
+					$percent: unquote(( 100 / ( $columns / $i ) ) + "%");
+					&.sc-s#{$i} {
+						width: $percent;
+						margin-left: auto;
+						left: auto;
+						right: auto;
+					}
+					$i: $i + 1;
+				}
+
+				$i: 1;
+				@while $i <= $columns {
+					$percent: unquote(( 100 / ( $columns / $i ) ) + "%");
+					&.sc-offset-s#{$i} {
+						margin-left: $percent;
+					}
+					&.sc-pull-s#{$i} {
+						right: $percent;
+					}
+					&.sc-push-s#{$i} {
+						left: $percent;
+					}
+					$i: $i + 1;
+				}
 			}
-			&.sc-push-s#{$i} {
-				left: $percent;
-			}
-			$i: $i + 1;
 		}
 
-		@media #{$medium-up} {
-
+		@media #{$medium-only} {
 			$i: 1;
 			@while $i <= $columns {
 				$percent: unquote( ( 100 / ( $columns / $i ) ) + "%" );
@@ -132,7 +201,7 @@ $xlarge-down: "only screen and (max-width: #{$xlarge-screen})";
 			}
 		}
 
-		@media #{$large-up} {
+		@media #{$large-only} {
 			$i: 1;
 			@while $i <= $columns {
 				$percent: unquote( ( 100 / ( $columns / $i ) ) + "%" );
@@ -160,5 +229,64 @@ $xlarge-down: "only screen and (max-width: #{$xlarge-screen})";
 				$i: $i + 1;
 			}
 		}
+
+		@media #{$xlarge-up} {
+			$i: 1;
+			@while $i <= $columns {
+				$percent: unquote( ( 100 / ( $columns / $i ) ) + "%" );
+				&.sc-xl#{$i} {
+					width: $percent;
+					margin-left: auto;
+					left: auto;
+					right: auto;
+				}
+				$i: $i + 1;
+			}
+
+			$i: 1;
+			@while $i <= $columns {
+				$percent: unquote( ( 100 / ( $columns / $i ) ) + "%" );
+				&.sc-offset-xl#{$i} {
+					margin-left: $percent;
+				}
+				&.sc-pull-xl#{$i} {
+					right: $percent;
+				}
+				&.sc-push-xl#{$i} {
+					left: $percent;
+				}
+				$i: $i + 1;
+			}
+		}
+	}
+}
+
+.sc-xs-hidden {
+	@media #{$xsmall-only} {
+		display: none;
+	}
+}
+
+.sc-s-hidden {
+	@media #{$small-only} {
+		display: none;
+	}
+}
+
+.sc-m-hidden {
+	@media #{$medium-only} {
+		display: none;
+	}
+}
+
+.sc-l-hidden {
+	@media #{$large-only} {
+		display: none;
+	}
+}
+
+.sc-xl-hidden {
+	@media #{$xlarge-only} {
+		display: none;
 	}
 }
