--- a/stylesheets/scss/components/_settings.scss
+++ b/stylesheets/scss/components/_settings.scss
@@ -393,6 +393,7 @@ $medium-screen: 1280px; // Large tablet
 $large-screen: 1600px; // Small desktop
 $xlarge-screen: 1920px; // "Normal" desktop
 
+// Columns
 $xsmall-columns: 4; // Default 4
 $small-columns: 8; // Default 8
 $columns: 12; // Default 12
