--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -33,5 +33,6 @@
 @import 'components/sliders'; // Used to style sliders (can be turned off)
 @import 'components/snackbars'; // Used to style snackbars and toasts (can be turned off)
 @import 'components/tables'; // Used to style tables (can be turned off)
+@import 'components/tabs'; // Used to style tabs (can be turned off)
 @import 'components/textfields'; // Used to style input (can be turned off)
 @import 'components/tooltips'; // Used to style tooltips (can be turned off)
