--- a/stylesheets/scss/components/_selection.scss
+++ b/stylesheets/scss/components/_selection.scss
@@ -12,7 +12,7 @@ input[type="checkbox"] {
 			position: relative;
 
 			&:before {
-				@extend .material-icons;
+				font-family: 'Material Icons';
 				display: inline-block;
 				content: 'check_box_outline_blank';
 				width: $checkbox-size;
@@ -80,7 +80,7 @@ input[type="radio"] {
 
 		+ label {
 			&:before {
-				@extend .material-icons;
+				font-family: 'Material Icons';
 				display: inline-block;
 				content: 'radio_button_unchecked';
 				width: $radio-size;
@@ -88,7 +88,6 @@ input[type="radio"] {
 				vertical-align: middle;
 				line-height: $radio-size;
 				margin-right: $radio-margin;
-
 			}
 		}
 
@@ -141,7 +140,7 @@ input[type="radio"] {
 			background: $grey-50;
 			position: absolute;
 			@extend .sc-z1;
-			top: - remCalc(5px);
+			top: remCalc(-5px);
 			@include transition(background 300ms ease-in-out);
 		}
 	}
